tests/diagnostics/method_not_found.kal
# Calling a method the type doesn't have.
struct P { x: i64 }
{ let p: P = P { x: 1 }; printi(p.area()); };
